@@ -1,4 +1,26 @@
-DIST wqy-microhei-0.2.0-beta.tar.gz 2418536 SHA256 2802ac8023aa36a66ea6e7445854e3a078d377ffff42169341bd237871f7213e
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST wqy-microhei-0.2.0-beta.tar.gz 2418536 SHA256 2802ac8023aa36a66ea6e7445854e3a078d377ffff42169341bd237871f7213e SHA512 c1e09c83f6427f637b3c93c7f89e427bde7fb22cedcfbb806fb036f13a553551f28d985516c7ab4c2602b4159502de36b52e6cc9b41c9b6d6e36778a6de74037 WHIRLPOOL 6158750a4ce7b9eed4696a7c78bab2d447d439573d803b71bf0d60b6d6c0e35df50eb2d2d89fd14911cd0b5aabfe346d5d9608bdf03a198cfdd5ee579d1e5dba
+DIST wqy-microhei.ttc.xd3 1896 SHA256 da93a41a885c2d786145ff853332c3a2f421b86edac5250f8a6708642642b276 SHA512 e18bbbb98e80c231dc6a4211b57b44f5025de17887e7e09efad0f5125c0b93ca5c6098c2064d65087b0c901b0563b06258c87f801c4348422eb6c738e55ddbd9 WHIRLPOOL 08a5538db28408a4fee8e5a6328583c80d11a65f47b538776629d6f7374c10cc310ac04f302a0d1c24d280e9d454a4524067cbd29ccdc0d44c66539f4f464e10
+EBUILD wqy-microhei-0.2.0_beta-r1.ebuild 859 SHA256 7c9ce6ae211f2ddcb3b944caa9264c655db0d01ffda20e7c523658c91e615415 SHA512 004bfef745e4712f999f629eb67ea0eec68e80a496555e4c54441d6a4f47f50560437f2ccd78b86f878d0982240e2bd9176bf8ca5769cd155f568417e69d40df WHIRLPOOL 185187a524c2fda1a2df28589be0f63ade9e5ed004bba7ff552805d2ce196a929d2ade1a593a6d9bad6a4132b94c7755e79e70afaa6f3327e48aa93e29b45e54
 EBUILD wqy-microhei-0.2.0_beta.ebuild 637 SHA256 8d4f67ad2e21c8abc82561d84942c5a0524c44c5a021081dadb2ca08440092e4 SHA512 83ef610717f808abbe1a11015adefbfff20c28bc0ec171be08caed29b9955c3c9462e86fd671a81d644b3d781974f8763c0d65054f9871195638835065255d28 WHIRLPOOL 3a5e0dd94b4971089c71a50ef128938f9b24ce3a7e9f5d1dcd2b0386b6058e01cd75d97a40f4a70788aae05485caf0d275f7d8afd6a38337d851db642d3bbc0e
-MISC ChangeLog 587 SHA256 d229fa53f68bf18a34d0337cdff7c9a526f9e0ae92d850a696300c44d4810ab5 SHA512 8989d11d551a39234178c209f036a5281907f2dc3975c77b2d48845a5f4e84e7cd4c13b02823b64b5d647ff198a456b9d7eebcb11e1957d4a6c0b7528c648612 WHIRLPOOL 13320dea35ef15a89ca4febefed2974170d8c6e0e2a97654e899e2c289adc308e853e92df68daa9e77c5ecf93e81200644cba98575691150fe3f347e2dbb6c93
+MISC ChangeLog 836 SHA256 c6c07bd2c73e6b15ba9d862f41d2ef5c6a5b01d2c4b9ec7ae437872d9e0df5f2 SHA512 7630190007c41c5ccf14e99ec7157e4053be6baaed83bc2514c119bc2d9d1af05534a47c3a79d93f876baac9abea4859a4c7994601d8c21bea56aa1abc144b8f WHIRLPOOL 5150b938a4c5161227530fc34b1ad68f5e5734c5f2710313d55bc06e34e2ca8941011dcc64cbf1daf9df249f7b783eead5d6eda162f780f0f1a97cb2f8ca88c6
 MISC metadata.xml 177 SHA256 de679fe8d0c67152bec5c8c5ed36c0684745b918ca3e1994c17bb7991ca835fe SHA512 690b20b2b97bd9e30395d648b56f186e6a00be8a19b12dccb92f54c7f424b268d00d41a4be31c4fed1bf36db2898a447f04bad7331353f2b181183f8796e4cc9 WHIRLPOOL 4587f770317b31a89835f4c28404bbbc08c8e8d6ffeadd4f8d447a5ac38075f0ae4f7820c901330c513d9f20abcc474fd315c6edc3e4ac650ab3d748a73b13ac
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJUZXWjAAoJEJIMDbyqvv1VRP0P+weq8KTCvFtZ5JhzJdCazpAo
+hZ7zib6JHgiAZinaIawHGag0b3BjxxF7GPDunWFby7aGBRZ4/esciCpXJMyagD86
+3H1hNYJfOsxuZKo/oSJD4tXpfFBMRWV3UvriHJ3neH47EJRAh5rqdY2lOf4ejNai
+fkapv3wdxe/7bLGUuGty2SuL9MsRFwSNBkZzKPavFA55nw6k5xGZ5MssHwOzmvNO
+s1ypaNJmFTf6k+oEZ66sXvrml6dIfYI4fcIwtNGMWe2aGDrcskRR3Q+ctyo2C96/
+GR8DJzQitLL1Gy9JDXuoe9HrnI07yK8FVmFm7b2cJw+YLGfR6/Vad8AAjMe5lW82
+LLKZrvyXqcJtcJLA0+GP59x95BLukkUFwG/MffIsG+B/WwoQXPbn5FuiWVP2JUkf
+HESLHGdJPPlXzm/FQBzPkVZpH6P/FHMUhHQjp/gyORwuvgbHi2bdZmE7US8cdcWF
+xpzXZc9ze8RP7Ki+UdvSOMViObbVKapYIyOP8VsalzOBugFjuJc217GPSvFBI/d4
+fAxB+cbvtOdNpvogQipKe8lmijpBURbvnwZdxVMBt6Oro0Qws8c/sTXvpWvdtRc9
+GpBTPCyggsV+nXyEyH3Tor8bCy5pT0MvJFFB5HOFeKrpns57fLx+dRtMqPJqopQq
+6tnLaJGx4+pgOvnGGn9I
+=LVgs
+-----END PGP SIGNATURE-----
